# team8-yotov-template-repository

./: .gitignore  .pre-commit-config.yaml  README.md  bug_report_template.md  component.md  feature_request_issue_template.md  hello.py  pull_request_template.md  pyproject.toml  requirements.txt
.circleci/: config.yaml  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
calculator/: pyproject.toml
calculator/src/: __init__.py
calculator/src/calculator/: __init__.py  calculator.py
calculator/src/calculator/tests/: test_calculator.py
logger/: pyproject.toml
logger/src/: __init__.py
logger/src/logger/: __init__.py  logger.py
logger/src/logger/tests/: __init__.py  test_logger.py
notifier/: pyproject.toml
notifier/src/: __init__.py
notifier/src/notifier/: __init__.py  notifier.py
notifier/src/notifier/tests/: __init__.py  test_notifier.py
src/: __init__.py
src/calculator/: __init__.py  calculator.py  pyproject.toml
src/calculator/tests/: __init__.py  test_calculator.py
src/components/: __init__.py  calculator.py  logger.py  notifier.py
src/components/calculator/: __init__.py
src/logger/: __init__.py  logger.py  pyproject.toml
src/logger/tests/: __init__.py  test_logger.py
src/notifier/: __init__.py  notifier.py  pyproject.toml
src/notifier/tests/: __init__.py  test_notifier.py
tests/: __init__.py
tests/e2e/: __init__.py  test_end_to_end.py
tests/integration/: __init__.py  test_calculator_logger.py  test_logger_notifier.py
tests/unit/: __init__.py  test_calculator.py  test_logger.py  test_notifier.py
