[project]
name = "team8-yotov-template-repository"
version = "0.1.0"
description = "Template repository for Python projects with CI/CD, linting, testing, and coverage."
readme = "README.md"
requires-python = ">=3.11"  # Use a stable Python version
dependencies = [
    "coverage>=7.6.11",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.5",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # Error codes (PEP 8)
    "F",  # Pyflakes
    "W",  # Warnings (PEP 8)
    "D",  # Documentation checks
    "ANN",  # Type annotation checks
    "PLR",  # Refactoring checks
]
ignore = ["E501", "S101"]  # Ignore line length and `assert` warnings